# django-okta-auth

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: pr-verifier.yml  run-tests.yml  test-build-publish.yml
okta_oauth2/: .conf.py.swp  __init__.py  apps.py  backend.py  conf.py  decorators.py  exceptions.py  login.html  middleware.py  models.py  oauth_openid.py  tokens.py  urls.py  views.py
okta_oauth2/tests/: settings.py  test_backend.py  test_conf.py  test_decorator.py  test_middleware.py  test_token_validator.py  test_views.py  urls.py  utils.py
