[tool.poetry]
name = "django-okta-auth"
version = "0.6.0"
description = "Django Authentication for Okta OpenID"
authors = ["Matt Magin <matt.magin@cmv.com.au>"]
license = "MIT"
packages = [
    {include = "okta_oauth2"}
]
readme = "README.md"
homepage = "https://github.com/AzMoo/django-okta-auth"
repository = "https://github.com/AzMoo/django-okta-auth"

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=1.11.0"
requests = "^2.22.0"
PyJWT = "^1.7.1"
python-jose = {version = "^3.1.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pre-commit = "^2.0.1"
rope = "^0.16.0"
pytest = "^5.3.5"
pytest-django = "^3.8.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
