[tool.poetry]
name = "django-okta-auth"
version = "0.8.0"
description = "Django Authentication for Okta OpenID"
authors = ["Matt Magin <matt.magin@cmv.com.au>"]
license = "MIT"
packages = [
    {include = "okta_oauth2"}
]
readme = "README.md"
homepage = "https://github.com/AzMoo/django-okta-auth"
repository = "https://github.com/AzMoo/django-okta-auth"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=1.11.0"
requests = "^2.22.0"
PyJWT = "^2"
python-jose = {version = "^3.1.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"
rope = "^0.16.0"
pytest = "^5.3.5"
pytest-django = "^3.8.0"
mypy = "^1.1"
black = {version = "^23.1.0", allow-prereleases = true}
flake8 = "^3.8.4"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
