[tool.poetry]
packages = [
    {include = "okta_oauth2"}
]
repository = "https://github.com/AzMoo/django-okta-auth"
requires-poetry = "2.1.1"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=1.11.0"
requests = "^2.22.0"
PyJWT = "^2"
python-jose = {version = "^3.1.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"
rope = "^0.16.0"
pytest = "^7.2"
pytest-django = "^4.5"
mypy = "^1.1"
black = {version = "^23.1.0", allow-prereleases = true}
flake8 = "^3.8.4"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[project]
requires-python = "^3.8"
name = "django-okta-auth"
version = "0.8.0"
readme = "README.md"
license = "MIT"
description = "Django Authentication for Okta OpenID"
homepage = "https://github.com/AzMoo/django-okta-auth"
authors = [{name = "Matt Magin",email = "<matt.magin@cmv.com.au>"}]
